--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,13 @@ dependencies:
   geolocator: 
   geocoding: 
   flutter_easyloading: 
-  
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  provider: 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
